# agentchannel

./: .gitignore  DESIGN.md  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: desktop.yml  publish.yml
MVP/: ACP-1-protocol.md  product-roundtable-2026-04-02.md  product.md
desktop/src/: index.html
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns  tray.rgba
desktop/src-tauri/src/: crypto.rs  lib.rs  main.rs  mqtt.rs
desktop/src-tauri/src/mcp/: mod.rs
scripts/: rss-bridge.sh
scripts/rss-bridge-worker/: README.md  package-lock.json  package.json  wrangler.toml
scripts/rss-bridge-worker/src/: crypto.ts  rss.ts  worker.ts
site/: index.html
src/: brain.ts  cli.ts  config.ts  crypto.ts  distill.ts  forwarder.ts  identity.ts  local-store.ts  mqtt-client.ts  permissions.ts  persistence.ts  server.ts  store.ts  trust-store.ts  types.ts  update-check.ts  web.ts
src/tools/: brain.ts  channel.ts  create.ts  dm.ts  get-message.ts  hooks.ts  identity.ts  index.ts  info.ts  kick.ts  members.ts  mute.ts  name.ts  read.ts  registry.ts  retract.ts  send.ts  subchannels.ts  unread.ts  update-channel.ts
ui/: app.js  index.html  style.css
worker/: schema.sql  wrangler.json
worker/src/: index.ts
