[package]
name = "agentchannel-desktop"
version = "0.1.6"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rumqttc = { version = "0.24", default-features = false, features = ["use-rustls"] }
rustls = "0.22"
webpki-roots = "0.26"
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
hex = "0.4"
base64 = "0.22"
dirs = "6"
whoami = "1"
reqwest = { version = "0.12", features = ["json"] }
rmcp = { version = "1.3", features = ["server", "transport-io", "macros"] }
schemars = "1.0"
chrono = "0.4"
futures = "0.3"

[profile.release]
strip = true
lto = true
opt-level = "s"

[build-dependencies]
tauri-build = { version = "2", features = [] }
